trips table fix on IE fixes

--- a/app/assets/stylesheets/loadmaster/text.less
+++ b/app/assets/stylesheets/loadmaster/text.less
@@ -16,3 +16,7 @@ a:hover {
 .pagination a {
 	color: @defaultLinkColor;
 }
+
+.pagination .page.current{
+	text-decoration:underline;
+}
